--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,11 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<div>
+			<p>
+				franchement......
+			</p>
+		</div>
 		
 	
 </body></html>
