--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,10 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<div>
+			<h2>
+				Actuellement sur gitHub
+			</h2>
+		</div>
 	
 </body></html>
